Fixed section sizing on mobiles caused by search bar

--- a/components/loader/Loader.module.scss
+++ b/components/loader/Loader.module.scss
@@ -46,6 +46,7 @@ $crater-size: calc($planet-size / 3);
   position: relative;
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   display: grid;
   place-items: center;
   overflow: hidden;
