--- a/components/navigation/sidebar/Sidebar.module.scss
+++ b/components/navigation/sidebar/Sidebar.module.scss
@@ -3,6 +3,7 @@
   right: calc(#{-$sidebar-width} - 5px);
   width: $sidebar-width;
   height: 100vh;
+  height: 100dvh;
   box-shadow: -2px 0 3px $accent-color;
   transition: all 0.5s linear;
   z-index: 3;
