--- a/components/particles_background/ParticlesBackground.module.scss
+++ b/components/particles_background/ParticlesBackground.module.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   position: absolute;
   top: 0;
 }
