--- a/components/sections/technologies/Technologies.module.scss
+++ b/components/sections/technologies/Technologies.module.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   position: absolute;
   left: 0;
   top: 0;
